--- a/icons/manifest.json
+++ b/icons/manifest.json
@@ -11,6 +11,11 @@
             "src": "android-chrome-256x256.png",
             "sizes": "256x256",
             "type": "image/png"
+        },
+        {
+            "src": "android-chrome-512x512.jpg",
+            "sizes": "512x512",
+            "type": "image/jpg"
         }
     ],
     "start_url": "index.html",
