--- a/icons/manifest.json
+++ b/icons/manifest.json
@@ -18,7 +18,7 @@
             "type": "image/jpg"
         }
     ],
-    "start_url": "index.html",
+    "start_url": "../index.html",
     "theme_color": "#000",
     "background_color": "#000",
     "display": "standalone"
